[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
]
